--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@ym/rpc": "^0.5.6",
     "body-parser": "^1.17.1",
+    "cors": "^2.8.1",
     "express": "^4.15.2",
     "mongodb": "^2.2.24",
     "promise-redis": "^0.0.5"
