--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "author": "xuezi",
   "license": "ISC",
   "dependencies": {
+    "@ym/android-push": "^0.1.3",
     "@ym/rpc": "^0.5.6",
+    "apn": "^2.1.4",
     "body-parser": "^1.17.1",
     "cors": "^2.8.1",
     "express": "^4.15.2",
