--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "devDependencies": {},
   "scripts": {
     "nodemon": "nodemon game-server/app",
+    "dev": "NODE_ENV=development & nodemon game-server/app",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "xuezi",
