--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "game-server/app.js",
   "devDependencies": {},
   "scripts": {
+    "installer": "npm install && cd game-server & npm install",
     "nodemon": "nodemon game-server/app",
     "dev": "NODE_ENV=development & nodemon game-server/app",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -13,12 +14,17 @@
   "license": "ISC",
   "dependencies": {
     "@ym/android-push": "^0.1.3",
+    "@ym/qiniu": "^0.3.2",
     "@ym/rpc": "^0.7.1",
     "apn": "^2.1.4",
     "body-parser": "^1.17.1",
+    "connect-multiparty": "^2.1.0",
     "cors": "^2.8.1",
     "express": "^4.15.2",
+    "md5-file": "^3.2.3",
+    "mime": "^2.2.0",
     "mongodb": "^2.2.24",
-    "promise-redis": "^0.0.5"
+    "promise-redis": "^0.0.5",
+    "uuid": "^3.1.0"
   }
 }
