--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "express": "^4.15.2",
     "md5-file": "^3.2.3",
     "mime": "^2.2.0",
+    "mipush": "^1.1.0",
     "mongodb": "^2.2.24",
     "promise-redis": "^0.0.5",
     "uuid": "^3.1.0"
