--- a/package.json
+++ b/package.json
@@ -26,6 +26,10 @@
     "mipush": "^1.1.0",
     "mongodb": "^2.2.24",
     "promise-redis": "^0.0.5",
-    "uuid": "^3.1.0"
+    "uuid": "^3.1.0",
+    "co": "^4.6.0",
+    "crc": "0.2.0",
+    "pomelo": "2.2.x",
+    "redis": "^2.6.5"
   }
 }
