--- a/package.json
+++ b/package.json
@@ -18,18 +18,19 @@
     "@ym/rpc": "^0.7.1",
     "apn": "^2.1.4",
     "body-parser": "^1.17.1",
+    "co": "^4.6.0",
     "connect-multiparty": "^2.1.0",
     "cors": "^2.8.1",
+    "crc": "0.2.0",
     "express": "^4.15.2",
+    "java": "^0.9.0",
     "md5-file": "^3.2.3",
     "mime": "^2.2.0",
     "mipush": "^1.1.0",
     "mongodb": "^2.2.24",
-    "promise-redis": "^0.0.5",
-    "uuid": "^3.1.0",
-    "co": "^4.6.0",
-    "crc": "0.2.0",
     "pomelo": "2.2.x",
-    "redis": "^2.6.5"
+    "promise-redis": "^0.0.5",
+    "redis": "^2.6.5",
+    "uuid": "^3.1.0"
   }
 }
