--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "connect-multiparty": "^2.1.0",
     "cors": "^2.8.1",
     "crc": "0.2.0",
+    "crypto": "^1.0.1",
     "express": "^4.15.2",
     "java": "^0.9.0",
     "md5-file": "^3.2.3",
@@ -30,7 +31,9 @@
     "mongodb": "^2.2.24",
     "pomelo": "2.2.x",
     "promise-redis": "^0.0.5",
+    "protobufjs": "^6.8.6",
     "redis": "^2.6.5",
+    "request": "file:node_modules/request",
     "uuid": "^3.1.0"
   }
 }
