--- a/package.json
+++ b/package.json
@@ -18,13 +18,13 @@
     "@ym/rpc": "^0.7.1",
     "apn": "^2.1.4",
     "body-parser": "^1.17.1",
+    "canvas": "^2.0.0-alpha.11",
     "co": "^4.6.0",
     "connect-multiparty": "^2.1.0",
     "cors": "^2.8.1",
     "crc": "0.2.0",
     "crypto": "^1.0.1",
     "express": "^4.15.2",
-    "java": "^0.9.0",
     "md5-file": "^3.2.3",
     "mime": "^2.2.0",
     "mipush": "^1.1.0",
