--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@ym/android-push": "^0.1.3",
     "@ym/qiniu": "^0.3.5",
+    "@ym/redis": "^0.9.2",
     "@ym/rpc": "^0.7.1",
     "apn": "^2.1.4",
     "body-parser": "^1.17.1",
