--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "protobufjs": "^3.8.2",
     "redis": "^2.6.5",
     "request": "^2.85.0",
+    "socket.io": "^2.1.0",
     "uuid": "^3.1.0"
   }
 }
