--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,7 @@ logs/*.log
 *.log
 !.gitignore
 game-server/node_modules/*
-web-server/node_modules/*
+web-server/
 node_modules/
 .project
 .settings/
