--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "game-server/app.js",
   "devDependencies": {},
   "scripts": {
+    "start": "nodemon game-server/app",
     "installer": "npm install && cd game-server & npm install",
     "nodemon": "nodemon game-server/app",
     "dev": "NODE_ENV=development & nodemon game-server/app",
@@ -13,10 +14,6 @@
   "author": "xuezi",
   "license": "ISC",
   "dependencies": {
-    "@ym/android-push": "^0.1.3",
-    "@ym/qiniu": "^0.3.5",
-    "@ym/redis": "^0.9.2",
-    "@ym/rpc": "^0.7.1",
     "apn": "^2.1.4",
     "body-parser": "^1.17.1",
     "canvas": "^2.0.0-alpha.11",
@@ -37,6 +34,10 @@
     "redis": "^2.6.5",
     "request": "^2.85.0",
     "socket.io": "^2.1.0",
-    "uuid": "^3.1.0"
+    "uuid": "^3.1.0",
+    "ym-android-push": "^0.1.4",
+    "ym-qiniu": "^0.3.11",
+    "ym-redis": "^0.9.2",
+    "ym-rpc": "^0.7.1"
   }
 }
