--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "protobufjs": "^3.8.2",
     "redis": "^2.6.5",
     "request": "^2.85.0",
+    "schema-object": "^4.0.11",
     "socket.io": "^2.1.0",
     "uuid": "^3.1.0",
     "ym-android-push": "^0.1.4",
