查找玩家接口对接修改

--- a/package.json
+++ b/package.json
@@ -23,10 +23,12 @@
     "crc": "0.2.0",
     "crypto": "^1.0.1",
     "express": "^4.15.2",
+    "generic-pool": "^2.5.4",
     "md5-file": "^3.2.3",
     "mime": "^2.2.0",
     "mipush": "^1.1.0",
     "mongodb": "^2.2.24",
+    "mysql": "^2.15.0",
     "oauth2-server": "^2.4.1",
     "pomelo": "2.2.x",
     "promise-redis": "^0.0.5",
