--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "installer": "npm install && cd game-server & npm install",
     "nodemon": "nodemon game-server/app",
     "dev": "NODE_ENV=development & nodemon game-server/app",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "buildApidoc": "apidoc -i  ./game-server/app/express-proxy/route/ -o ./apidoc/ -f \".*.js$\""
   },
   "author": "xuezi",
   "license": "ISC",
