--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start": "nodemon game-server/app",
     "installer": "npm install && cd game-server & npm install",
     "nodemon": "nodemon game-server/app",
-    "dev": "NODE_ENV=development & nodemon game-server/app",
+    "dev": "set NODE_ENV=development&&nodemon game-server/app",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "xuezi",
@@ -28,6 +28,7 @@
     "mipush": "^1.1.0",
     "mongodb": "^2.2.24",
     "oauth2-server": "^2.4.1",
+    "or": "^0.2.0",
     "pomelo": "2.2.x",
     "promise-redis": "^0.0.5",
     "protobufjs": "^3.8.2",
@@ -37,6 +38,7 @@
     "schema-object": "^4.0.11",
     "socket.io": "^2.1.0",
     "uuid": "^3.1.0",
+    "yarn": "^1.7.0",
     "ym-android-push": "^0.1.4",
     "ym-qiniu": "^0.3.11",
     "ym-redis": "^0.9.2",
